--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier:format": "prettier --write \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\""
   },
   "devDependencies": {
+    "sass": "1.59.3",
     "cypress": "12.8.1",
     "eslint-plugin-cypress": "2.12.1",
     "@testing-library/react": "14.0.0",
@@ -69,6 +70,9 @@
     "prettier-plugin-packagejson": "2.4.3"
   },
   "dependencies": {
+    "react-hook-form": "7.43.7",
+    "axios": "1.3.4",
+    "@nextui-org/react": "1.0.0-beta.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
