--- a/package.json
+++ b/package.json
@@ -7,13 +7,22 @@
   "engines": {
     "node": ">=18.15.0"
   },
+  "jestSonar": {
+    "reportPath": "target/test-results",
+    "reportFile": "TESTS-results-sonar.xml"
+  },
   "cacheDirectories": [
     "node_modules"
   ],
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build --emptyOutDir",
+    "preview": "vite preview",
+    "start": "vite",
+    "lint": "eslint --ext .js,.ts,.tsx src/main/webapp/app/**/*",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest --",
     "jest": "jest src/test/javascript/spec --logHeapUsage --maxWorkers=2 --no-cache",
-    "test": "npm run jest --",
-    "test:watch": "jest --watch",
     "test:watch:all": "jest --watchAll",
     "eslint:ci": "eslint './**/*.{ts,js}'",
     "eslint": "eslint './**/*.{ts,js}' --fix",
@@ -22,10 +31,24 @@
     "prettier:format": "prettier --write \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\""
   },
   "devDependencies": {
-    "typescript": "5.0.2",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/ws": "8.5.4",
     "@typescript-eslint/eslint-plugin": "5.55.0",
-    "@typescript-eslint/parser": "5.55.0",
+    "@vitejs/plugin-react": "3.1.0",
+    "@vitest/coverage-istanbul": "0.29.3",
     "eslint": "8.36.0",
+    "eslint-plugin-react": "7.32.2",
+    "jsdom": "21.1.1",
+    "typescript": "5.0.2",
+    "ts-node": "10.9.1",
+    "vite": "4.2.0",
+    "vitest": "0.29.3",
+    "vitest-sonar-reporter": "0.3.5",
+    "@typescript-eslint/parser": "5.55.0",
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
@@ -38,5 +61,9 @@
     "prettier": "2.8.4",
     "prettier-plugin-java": "2.1.0",
     "prettier-plugin-packagejson": "2.4.3"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
