--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,28 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "commonjs",
-    "noImplicitAny": true,
-    "removeComments": true,
-    "preserveConstEnums": true,
-    "outFile": "dist/main.js",
-    "sourceMap": true,
-    "baseUrl": ".",
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "skipLibCheck": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+    "composite": false,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "baseUrl": "src",
+    "types": ["vitest/globals"],
     "paths": {
-      "@/*": ["src/main/webapp/app/*"]
+      "@/*": ["main/webapp/app/*"],
+      "@assets/*": ["main/webapp/assets/*"]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": ["vite.config.ts", "src"],
+  "exclude": ["src/test/javascript/integration/**/*spec.ts", "node_modules"]
 }
