--- a/package.json
+++ b/package.json
@@ -4,76 +4,78 @@
   "private": true,
   "description": "JHipster Sample Application",
   "license": "UNLICENSED",
+  "scripts": {
+    "build": "tsc && vite build --emptyOutDir",
+    "dev": "vite",
+    "e2e": "npm run test:component",
+    "e2e:headless": "npm run test:component:headless",
+    "eslint": "eslint './**/*.{ts,js}' --fix",
+    "eslint:ci": "eslint './**/*.{ts,js}'",
+    "jest": "jest src/test/javascript/spec --logHeapUsage --maxWorkers=2 --no-cache",
+    "lint": "eslint --ext .js,.ts,.tsx src/main/webapp/app/**/*",
+    "prepare": "husky install",
+    "prettier:check": "prettier --check \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\"",
+    "prettier:format": "prettier --write \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\"",
+    "preview": "vite preview",
+    "start": "vite",
+    "test": "vitest run --coverage",
+    "test:component": "cypress open --config-file src/test/javascript/integration/cypress-config.ts",
+    "test:component:headless": "cypress run --headless --config-file src/test/javascript/integration/cypress-config.ts",
+    "test:watch": "vitest --",
+    "test:watch:all": "jest --watchAll"
+  },
+  "dependencies": {
+    "@nextui-org/react": "1.0.0-beta.12",
+    "axios": "1.3.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.43.7",
+    "react-router-dom": "^6.9.0"
+  },
+  "devDependencies": {
+    "@prettier/plugin-xml": "2.2.0",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "29.5.0",
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/ws": "8.5.4",
+    "@typescript-eslint/eslint-plugin": "5.55.0",
+    "@typescript-eslint/parser": "5.55.0",
+    "@vitejs/plugin-react": "3.1.0",
+    "@vitest/coverage-istanbul": "0.29.3",
+    "cypress": "12.8.1",
+    "eslint": "8.36.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "husky": "8.0.3",
+    "jest": "28.1.3",
+    "jsdom": "21.1.1",
+    "lint-staged": "13.2.0",
+    "prettier": "2.8.4",
+    "prettier-plugin-java": "2.1.0",
+    "prettier-plugin-packagejson": "2.4.3",
+    "sass": "1.59.3",
+    "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
+    "typescript": "5.0.2",
+    "vite": "4.2.0",
+    "vitest": "0.29.3",
+    "vitest-sonar-reporter": "0.3.5"
+  },
   "engines": {
     "node": ">=18.15.0"
-  },
-  "jestSonar": {
-    "reportPath": "target/test-results",
-    "reportFile": "TESTS-results-sonar.xml"
   },
   "cacheDirectories": [
     "node_modules"
   ],
-  "scripts": {
-    "e2e": "npm run test:component",
-    "e2e:headless": "npm run test:component:headless",
-    "test:component": "cypress open --config-file src/test/javascript/integration/cypress-config.ts",
-    "test:component:headless": "cypress run --headless --config-file src/test/javascript/integration/cypress-config.ts",
-    "dev": "vite",
-    "build": "tsc && vite build --emptyOutDir",
-    "preview": "vite preview",
-    "start": "vite",
-    "lint": "eslint --ext .js,.ts,.tsx src/main/webapp/app/**/*",
-    "test": "vitest run --coverage",
-    "test:watch": "vitest --",
-    "jest": "jest src/test/javascript/spec --logHeapUsage --maxWorkers=2 --no-cache",
-    "test:watch:all": "jest --watchAll",
-    "eslint:ci": "eslint './**/*.{ts,js}'",
-    "eslint": "eslint './**/*.{ts,js}' --fix",
-    "prepare": "husky install",
-    "prettier:check": "prettier --check \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\"",
-    "prettier:format": "prettier --write \"{,src/**/}*.{md,json,yml,html,js,ts,tsx,css,scss,vue,java,xml}\""
-  },
-  "devDependencies": {
-    "sass": "1.59.3",
-    "cypress": "12.8.1",
-    "eslint-plugin-cypress": "2.12.1",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@types/ws": "8.5.4",
-    "@typescript-eslint/eslint-plugin": "5.55.0",
-    "@vitejs/plugin-react": "3.1.0",
-    "@vitest/coverage-istanbul": "0.29.3",
-    "eslint": "8.36.0",
-    "eslint-plugin-react": "7.32.2",
-    "jsdom": "21.1.1",
-    "typescript": "5.0.2",
-    "ts-node": "10.9.1",
-    "vite": "4.2.0",
-    "vitest": "0.29.3",
-    "vitest-sonar-reporter": "0.3.5",
-    "@typescript-eslint/parser": "5.55.0",
-    "eslint-import-resolver-typescript": "3.5.3",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
-    "jest": "28.1.3",
-    "@types/jest": "29.5.0",
-    "ts-jest": "28.0.8",
-    "@prettier/plugin-xml": "2.2.0",
-    "husky": "8.0.3",
-    "lint-staged": "13.2.0",
-    "prettier": "2.8.4",
-    "prettier-plugin-java": "2.1.0",
-    "prettier-plugin-packagejson": "2.4.3"
-  },
-  "dependencies": {
-    "react-hook-form": "7.43.7",
-    "axios": "1.3.4",
-    "@nextui-org/react": "1.0.0-beta.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+  "jestSonar": {
+    "reportPath": "target/test-results",
+    "reportFile": "TESTS-results-sonar.xml"
   }
 }
