--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "test:component:headless": "cypress run --headless --config-file src/test/javascript/integration/cypress-config.ts",
     "test:tsc": "tsc --noEmit",
     "test:tsc:watch": "tsc --watch --noEmit",
-    "test:watch": "vitest --",
-    "test:watch:all": "jest --watchAll"
+    "test:watch": "vitest --"
   },
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.12",
@@ -56,14 +55,12 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "husky": "8.0.3",
-    "jest": "28.1.3",
     "jsdom": "21.1.1",
     "lint-staged": "13.2.0",
     "prettier": "2.8.4",
     "prettier-plugin-java": "2.1.0",
     "prettier-plugin-packagejson": "2.4.3",
     "sass": "1.59.3",
-    "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "typescript": "5.0.2",
     "vite": "4.2.0",
