--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.7",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "three": "^0.151.3"
   },
   "devDependencies": {
     "@prettier/plugin-xml": "2.2.0",
@@ -42,6 +43,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/three": "^0.150.2",
     "@types/ws": "8.5.4",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
